# serde-test2

./: Cargo.toml  v2.md
src/: assert.rs  configure.rs  de.rs  error.rs  lib.rs  ser.rs  token.rs
